src/test/deca/context/valid/created/class-fille-appel-champ-parent.deca
class A{
	int a = 3;
}
class B extends A{

}
{
	B obj = new B();
	int b;
	b = obj.a;
}