src/test/deca/context/invalid/created/illegal-new2.deca
class A{

}
class B extends A{

}
{
	B a = new A();
}
